infrastructure/Virtualization/Kubernetes/pod.kiada-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-args
  labels:
    name: kiada-args
spec:
  containers:
  - name: kiada-args
    image: luksa/kiada:0.4
    # Dockerfile ENTRYPOINT
    command:
      - node
      - --cpu-prof
      - --heap-prof
      - app.js
    # Dockerfile CMD
    args:
      - --listen-port
      - $(LISTEN_PORT)
    # 环境变量
    env:
      - name: POD_NAME
        value: kiada
      - name: INITIAL_STATUS_MESSAGE
        value: This status message is set in the pod spec. My name is $(POD_NAME). I run NodeJS version $(NODE_VERSION). - hostname is $HOSTNAME.
      - name: LISTEN_PORT
        value: "9090"
    ports:
      - name: http
        containerPort: 9090
