infrastructure/Virtualization/Kubernetes/pod.kiada-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-liveness
  labels:
    name: kiada-liveness
spec:
  containers:
  - name: kiada
    image: luksa/kiada:1.0
    stdin: true
    ports:
      - name: http
        containerPort: 8080
    # startup探针: 处理启动慢的容器
    startupProbe:
      httpGet:
        path: /
        port: http
      periodSeconds: 10
      failureThreshold: 12
    # liveness探针
    livenessProbe:
      # HTTP GET探针
      httpGet:
        path: /
        port: 8080
  # Envoy sidecar
  - name: envoy
    image: luksa/kiada-ssl-proxy:1.0
    ports:
     - name: https
       containerPort: 8443
     - name: admin
       containerPort: 9901
    livenessProbe:
      httpGet:
        path: /ready
        port: admin
      # 容器启动后探查延迟
      initialDelaySeconds: 10
      # 探查周期
      periodSeconds: 5
      # 探查超时时间
      timeoutSeconds: 2
      # 探查失败次数阈值
      failureThreshold: 3
