infrastructure/Virtualization/Kubernetes/pod.kiada-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-secret
spec:
  volumes:
  - name: cert-and-key
    secret: # Secret Volume
      secretName: kiada-tls
      items:
      - key: tls.crt
        path: example-com.cert
      - key: tls.key
        path: example-com.key
        mode: 0600
  - name: envoy-config
    configMap: # ConfigMap Volume
      name: kiada-envoy-config
      items:
      - key: envoy.yaml
        path: envoy.yaml
  containers:
  - name: kiada
    image: luksa/kiada:0.4
    ports:
    - name: http
      containerPort: 8080
  - name: envoy
    image: envoyproxy/envoy:v1.14.1
    volumeMounts:
    - name: cert-and-key # 证书
      mountPath: /etc/certs
      readOnly: true
    - name: envoy-config # 配置
      mountPath: /etc/envoy
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
