infrastructure/Virtualization/Kubernetes/pod.kiada-ssl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-ssl
spec:
  containers:
  - name: kiada
    image: luksa/kiada:0.2
    stdin: true
    ports:
      - name: http
        containerPort: 8080
  # Envoy sidecar
  - name: envoy
    image: luksa/kiada-ssl-proxy:0.1
    ports:
     - name: https
       containerPort: 8443
     - name: admin
       containerPort: 9901
